src/test/ui/mut/mutable-class-fields-2.stderr
error[E0594]: cannot assign to `self.how_hungry` which is behind a `&` reference
  --> $DIR/mutable-class-fields-2.rs:9:5
   |
LL |   pub fn eat(&self) {
   |              ----- help: consider changing this to be a mutable reference: `&mut self`
LL |     self.how_hungry -= 5;
   |     ^^^^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be written

error: aborting due to previous error

